--- a/EntrySystem/src/main/resources/application.properties
+++ b/EntrySystem/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost/entry_system?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost/entry_system?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
